--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "~41.0.1",
+    "expo-permissions": "^12.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "^8.4.3",
     "react": "16.13.1",
