--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-firebase/app": "^12.8.0",
     "@react-native-firebase/auth": "^12.8.0",
-    "@react-native-firebase/storage": "^12.4.0",
+    "@react-native-firebase/storage": "^12.8.0",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "~41.0.1",
-    "expo-image-picker": "~10.1.4",
-    "expo-permissions": "^12.0.1",
+    "expo-image-picker": "^10.1.4",
+    "expo-permissions": "^12.1.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "^8.4.3",
     "react": "16.13.1",
